SALESFORCE/force-apps/deploy/main/default/objects/Course__c/fields/OrgPasswordAssigned__c.field-meta.xml
<CustomField>
    <fullName>OrgPasswordAssigned__c</fullName>
    <label>Org Password Assigned</label>
    <length>15</length>
    <type>Text</type>
</CustomField>