SALESFORCE/force-apps/deploy/main/default/objects/Course__c/fields/OrgPasswordChanged__c.field-meta.xml
<CustomField>
    <fullName>OrgPasswordChanged__c</fullName>
    <label>Org Password Changed</label>
    <length>15</length>
    <type>Text</type>
</CustomField>