SALESFORCE/force-apps/deploy/main/default/objects/Course__c/fields/OrgUsername__c.field-meta.xml
<CustomField>
    <fullName>OrgUsername__c</fullName>
    <label>Org Username</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>