SALESFORCE/force-apps/deploy/main/default/objects/Course__c/validationRules/Username_must_have_control_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Username_must_have_control_characters</fullName>
    <active>true</active>
    <description>#####</description>
    <errorConditionFormula>NOT(CONTAINS(OrgUsername__c,&apos;#####&apos;) )</errorConditionFormula>
    <errorMessage>The username must have the control characters (#####)</errorMessage>
</ValidationRule>