SALESFORCE/force-apps/deploy/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OrgUsername__c</columns>
    <columns>OrgPasswordAssigned__c</columns>
    <columns>OrgPasswordChanged__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>